[gd_scene load_steps=7 format=3 uid="uid://3pwk1tu6fo3o"]

[ext_resource type="Script" uid="uid://n4q4nrxyxrki" path="res://scenes/ui/perks/perks_menu.gd" id="1_qs381"]
[ext_resource type="Texture2D" uid="uid://jrew33k514xw" path="res://assets/gui/panels/h_bar.png" id="2_giwpn"]
[ext_resource type="Texture2D" uid="uid://dp5bl36r00tky" path="res://assets/gui/buttons/close_button_normal.png" id="3_4fq3l"]
[ext_resource type="Texture2D" uid="uid://dmua3jnsjlbgr" path="res://assets/gui/buttons/button_rect.png" id="4_4fq3l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_giwpn"]
texture = ExtResource("2_giwpn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3iut3"]
texture = ExtResource("4_4fq3l")

[node name="PerksMenuUI" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qs381")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = -528.5
offset_top = -283.0
offset_right = 592.5
offset_bottom = 347.0
theme_override_styles/panel = SubResource("StyleBoxTexture_giwpn")

[node name="ChoicesContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="CloseButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_right = 1.0
offset_bottom = 32.0
grow_horizontal = 0
texture_normal = ExtResource("3_4fq3l")

[node name="RerollButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -161.0
offset_top = -88.0
offset_right = -51.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_3iut3")
text = "Reroll (1)"

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/RerollButton" to="." method="_on_reroll_button_pressed"]
